@@ -64,6 +64,25 @@ steps:
     inputs:
       script: |
         export PATH="$(Qt5_DIR)/bin:$PATH"
+        export SYNERGY_BUSINESS=1
+        mkdir build
+        cd build
+        cmake \
+          -DCMAKE_OSX_DEPLOYMENT_TARGET=$(version) \
+          -DCMAKE_OSX_ARCHITECTURES=x86_64 \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_CONFIGURATION_TYPES=Release \
+          -DSYNERGY_BUSINESS=ON ..
+    displayName: 'Cmake business'
+    condition: eq(variables['buildType'], 'business')
+    env:
+      GIT_COMMIT: $(Build.SourceVersion)
+      CMAKE_PREFIX_PATH: "$(Qt5_DIR);/usr/local/opt/openssl"
+
+  - task: CmdLine@2
+    inputs:
+      script: |
+        export PATH="$(Qt5_DIR)/bin:$PATH"
         cd build
         . ./version
         make -j
